src/app/pages/overview/overview-view.component.scss
.layout {
  @apply grid gap-4 mt-4 items-start;
  @screen xl {
    grid-template-columns: 25rem 1fr;
  }

  .sidebar {
    @apply grid gap-4 md:grid-cols-2 xl:grid-cols-1 mxl:row-start-2;
  }

  .hours {
    .inner {
      @apply grid gap-10 py-10 px-4;

      .hour {
        @apply grid gap-2;
        .title {
          @apply text-sm font-semibold;
        }
        .time {
          @apply text-2xl font-semibold;
        }
      }
    }
  }

  .shop-card {
    .inner {
      @apply aspect-w-1 aspect-h-1;
    }

    .wrapper {
      @apply flex flex-col;
    }

    .image {
      @apply flex-1 items-center flex justify-center;

      img {
        @apply max-w-[50%];
      }
    }

    .content {
      @apply p-4;
    }
  }

  .schedule {
    .inner {
      .top {
        @apply grid gap-4 sm:grid-cols-2;

        .actual {
          @apply aspect-w-1 aspect-h-1 msm:row-start-2;

          &.late {
            @apply bg-red-600/10;
          }

          &.early {
            @apply bg-green-50;
          }

          .content {
            @apply flex flex-col gap-3 items-center justify-center;
            @apply font-semibold;

            .time {
              @apply flex flex-col items-center justify-center;

              .left {
                @apply text-7xl;
              }

              .units {
                @apply text-2xl;
              }
            }
          }
        }

        .log {
          @apply bg-light-200 dark:bg-dark-400 text-gray-400 text-2xl font-semibold cursor-pointer;
          @apply transition duration-300;
          @apply aspect-w-1 aspect-h-1;

          .content {
            @apply flex flex-col gap-4 items-center justify-center;

            .flag {
              @apply absolute text-main-dark dark:text-white m-4 rounded-full top-0 right-0 bg-light-600 dark:bg-dark-600;
              @apply w-12 h-12 flex items-center justify-center;
            }
          }

          &:hover {
            @apply bg-light-300 dark:bg-dark-200 text-gray-600 dark:text-white;
          }
        }

        & > * {
          @apply rounded-[1.7rem] overflow-hidden;
        }
      }
      .next {
        @apply -mx-4 py-4 mt-4;

        & > span {
          @apply px-4 font-semibold opacity-40;
        }

        .entries {
          @apply grid mt-5;

          .entry {
            @apply flex items-center justify-between px-4 py-6;

            &:nth-child(odd) {
              @apply bg-light-200 dark:bg-dark-200;
            }

            .time {
              @apply flex gap-3 font-semibold items-center;

              .from,
              .to {
                @apply bg-light-400 px-3 py-1 rounded-lg;
              }
            }
          }
        }
      }
    }
  }
}

